--- a/WorkAssistantFV/ViewModel/UserTask.resx
+++ b/WorkAssistantFV/ViewModel/UserTask.resx
@@ -117,16 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="lblTime.BaseStylesheet" xml:space="preserve">
+    <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 9pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(0, 0, 0); text-align: left; }</value>
+  </data>
+  <data name="lblDate.BaseStylesheet" xml:space="preserve">
+    <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 9pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(0, 0, 0); text-align: left; }</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="bunifuCheckBox1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACEAAAAhCAYAAABX5MJvAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAE5SURBVFhH7ZevcgIxEMZPIisrgFRWIpFIZB8BeRJZiavM
-        HcMMEskjVFbyCEhkZSVut7vH5nJHwiBIMoh8M79B3P75WHLMpnh6qTW+jzQuiNVDVFCqGqZS9r7UDgfj
-        Gr4o8TyuEINTw15t8FXauVIaJ9T8aBM6yY9wVYd6/A01fkhbK54APTz5koIitXnS9KXfpP1FNKatkxAd
-        +Jb27RTinIFbyETaafBZcIIS0Z6NkYalLyAF/AqLCVz5AlKQTRiyCUM2YcgmDNmEIZswZBOGJzNR4acv
-        IAWtiWENc19AVOzWXTYmaMd86T5Igl10J40JFq3fP05gZPieI+0vau6dZu2PPhEA/uRjIO2t+PfpBYc0
-        w7V69UBLW1d8eyYzh16BgFDtX+8EfBIzJb9CQaC/ATqEMynfUVH8A+nE7+cLkmZ8AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAB8AAAAfCAYAAAAfrhY5AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAEySURBVFhH7VehbgMxDD04WDjQNoODhYODhf2EwYODg8cG
+        czdNGizsJxQW9hMKBwcHx+zZV+9yt7iq1MZqQZ70dCDPfnF8kZziauHe8H7i8YlYncQaStfAg6Q7DrfE
+        m2kDrxT4M60Rk7GBlXvHW7GJ4TzOyHQXAnrBp/BfPOX+HntciF0AV0yLn1pQEkpOPlEq8k5s96Bj+YgC
+        zAhrse2qTtvjQ5QT6KrnXkciY3a9n3h41gSW5Kso5lhpAktm82yuiqyYzbO5KrJiNr+weY0vmsCSnfm4
+        gbkmMGGY5crWnCaZUX/BlGGMmrXmDBrqNpHQiDwli+0e7evkb4g0OwEA/nKbxTaA+zAQp9gE5xjkAS92
+        MfhtRZvYDhIkIOX8UivWIJso+UqcRbrG9HM9StoeiuIXCmOokI5P/DoAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="textForTask.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -142,7 +148,7 @@
         SUVORK5CYII=
 </value>
   </data>
-  <data name="bunifuLabel1.BaseStylesheet" xml:space="preserve">
+  <data name="lblTitle.BaseStylesheet" xml:space="preserve">
     <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 9pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(0, 0, 0); text-align: left; }</value>
   </data>
 </root>
