--- a/WorkAssistantFV/ViewModel/Home.resx
+++ b/WorkAssistantFV/ViewModel/Home.resx
@@ -3743,6 +3743,115 @@
   <data name="bunifuLabel4.BaseStylesheet" xml:space="preserve">
     <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 16.2pt; width: 100%; height: 100%; font-style: normal; font-weight: bold; text-decoration: none; color: rgb(34, 139, 34); text-align: left; }</value>
   </data>
+  <data name="pictureBox5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAebSURBVHhe7ZtpjBVFFIUZd9wQVHCLC6IIyA/RKIIi8Yc6gkswCDPAiDOAmhghkfgDo5mYYBwS
+        BBcMBqNCRDQKf5CoqCEEg1FAjCIoi+wKCowwqIAgfqc9Pb5ZmXmvZ+n3+iQn3XVv9a0+91UvVV2vTYIE
+        CRIkSJAgQYIECWKKoqKii4cPHz522LBhH8Dv4R5zF9yAbwHbcdS70IckEAoKCm4hMR/DI/BoA/g3nD1i
+        xIiODpGbGDx4cAcS8W5KYvYWFhbOpKcVwV4k9hzK7ZUoyl3xsxk+h60SqPo7KfdxuNwC4i+CukyViAoS
+        MYFEnWZ3vRgyZMjlHPOhj90/dOjQa+zKDdCrOiN8kxOwkvIldjUY9N7jOXaWY/wFNxBnBrzeVbITI0eO
+        PIXe9rWEs11C+Sy7Gg3FIs5mJzGV87j8O7ladgFx0yxyXXFx8Rk2pw1d9rpPEq83P8jzbPc6/g7KXV0t
+        O0Cv6IGwf+BBhF9nc6TQKw7xFzuJG/Ugsiv+QNAbFjbNpiYB98e2tLHIbU23Od5QT0DMQXiIp+alNmcM
+        P7nz/iv9D+yXcWkfoL3DbDvbHF9wPypQj2C7wKaMQWKuJeYGuAoWYqqSSPwz1SZ83Kb4AjGvSwwJHGtT
+        2iBOd/gmrD5ymTtmzJhTXU0/2n22f2JTfIGY4NWlsQ8P7mft9OLMD3APfAYuc1LEQ/BFbCVs99k2X++I
+        Ohb7FbatDYLFGYjYJjHc/y6wqQokmvvkXYjWZbcRahIhTFR1llNvBvWv8uGK3xPulh/feNmIebrrVwSV
+        4gxE6AFyFFEn2RSgtLT0OHpnET4lrXqiDsMdUPe4uSRmIj34Vi7TE314FRBngI8rp50O+fn5J6vMcQdc
+        Jb5AyB8Sk3qP0os0tnBMK64lCRNgL0S3d7VGgeMWKhYxRpHsjo670+74AhG/WNj5KmsYhtjgfobtV1ik
+        3hhUzgCK46TNZ7+L99fZHV8gYo3FdHd5usqIXK+HRFApAjASudLt/MAP1M/7n9sdXyBCE6a6H91J0jS3
+        pyGdLuuerhIJfFtQ0jS3OML7s+2OL0jaqxKDqEfgVAt72e5I4djq3RO8X2ZXfIGIJyxmCgkM7n28htxo
+        d6RwO6JetrUdbVd8QW+4w2I0yA/e8UhkWk/aY8HtiF9qyw91k13xRXhzJ5EaPQQC7YocYXwYfDspKSlp
+        9Ix3qwO9bUaKsOZKYMj4T2khIhhm+Qn8sMp2VQLbJLiHOs/ZVCfqq4t9F/aHeJHuxr4SuMuu+AIRmnbS
+        ZEI3lbmkzw4cKcBfYcH7bKoT9dUNY4cJJJnrA0ecgQh9z5WYUTbVAP5JXOoHautV1dGQutQZrTbh2zbF
+        F4jVlJMSOMemJgftveMEFtsUX5BAfQsOZmRC2hU5UttQL4XxfwoLCBmKqK2huP79+59gV2TQVFcYH26m
+        zcF2ZQ8Qtl0C65pczQTE1ZIRJW+rTdkHxK2QyKYYymnU4QR+ZVP2gcsqnEx42qbIwEOqVLFpY7JN2QcE
+        DnQCv6FY45tuBsgj5neOnW9b9sE3+i0SSo+52+aMQa8b5ORtquu7SdYAkeMs9id4ps1pQ6u8iBOs1CKR
+        j9mcvfAXs5UW/H74LTcd6HWIOPMUC66o/uUva+GxajimnZ2OcB2j0Y1jVKR+K84J+LUjXFWgHtngbyQk
+        rgu9N1yp8Dvl3FwvTRK0SEhJEA+TiLeUjNoeBH4A9YVaKlc5NMy5ddLVESaCZGpJWpjM/XCWFk2K2rct
+        9GttdLDvMLmLMBFOlCZLV4e2WihfmYaCoc1hche1JYLeqNVV+h/Jb6IeFrrv2R2gtuNyBlrKQZK0euCF
+        dBMRHkecqST35iiWh7R68PpyNaLLYLDkLZWu0mBUPx5quqyMp3sPV8kO+GV3CFxqoSHX0Hsmsg1WbyG8
+        wavqUz4a/QyfheH6m5BL6ZX3N8W8Y7MBkfofx3jEBGNfsxxhr2Cv/FcRtmDtDGzQDI1GLtT91MdULhGh
+        vRsUG1u5feIWnYPOxdVaPxDYDiGaWgo+Z5pLEYKr5oiDun3wa8HRn3q5trkuaNYlWN0Fd9T2hU9tqC38
+        qT1+t88p47F3k4KTvJeTTL2/ScRtuOqdukLwZNfXqGKAzVWgXoT/PdfTCKa3XXUhj7i3U+8LHyNuI35k
+        s0CRgV+9LScbrMY3NTQbaPcxoSco9cMFQUeI9ZJ6st3BiAX+aL96dl+7GgTqax4ymMAQSeJrWuhpd8uC
+        y64TJ7XcJ7ePk3s0zVeKPI59ihhaH61YWtn6AHwShkO3VXqAuH6joHPSuREjGH/zgywjVsv+cVsnwMmE
+        T8BVnGDGf/JTbyNWsLoqhbpHTomi1+gciaXF64q7mp5+rl3NC1924RN0OcIjW7Lm3vKgBMJvid3Prkig
+        cyVu8IELfpTmFZMZEBj+G2i7LmObo0YePSTtCdf6QG8+T+cuDSR0kM3NBxr9zI2X2BQ70AlGWcNCm5oP
+        NKyBvv5A0zL3kAjge7iuoub/P4kbrjKGpbxIPdPFVl8WsNXQ0SyorWEuiSXYFrvY6ssC5daTwDgiSWCG
+        aPEEZgstq/lQ20nEmZaVIEGCBAkSJEiQIEGCpkebNv8CabouW1gWfNkAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAPlSURBVHhe7ZoBbhw3EATl7/hJkh5g52OxHxEEQT4TvyLZHjcJHtNzS5EzurXNAhrCdvcN5w72
+        Sgvc02az2Ww2m81mswnm5eXl46F/L66PXPeSfDgW/NYtfCX9gx2/r3pRXl9ff8eyz8/Pn2k9nGOf37AT
+        dqN1XY5FP2HZQ19oPZxjl6/c6ROt63IseXMfPP4l/sEI2Z/vfX2o7nLo0ve/Qn8f/Is+/nv//YDrssf1
+        738tZXFePoyr7PFm9ge4yP4AF9kf4CLe4sXvxdhQOcTYUDnEuOL5l+fsDfVibKgcYmyoHGJc8fzLM/qG
+        VC+qA4r/jor5W7MM5GWl91UvqgOK/06K+1uzDOVlpfdVL6oDPD+SY378s7a3eO+rXlQHeH4kx/z4Z21v
+        8eL3YmyoHGJsqBxiXGn94+eP86xdhvKy0hx2I8aGyiHGhsohxpXWn3yWfsyzdhnMy4eRvUfa/OzFR8ne
+        I21+9uKjZO+RNj978VGy90ib7w0ufi/GhsohxobKIcYV5bf9VowNlUOMK56/zNmBvRgbKocYGyqHGFeU
+        3/ZbMTZUDjGueP4yoweqXlQHKL/3ZjvA85cZPVD1ojpA+b032wGev8zogaoX1QHK773ZDvD8ZUYPVL2o
+        DlB+7812gOcvc3ZgL8aGyiHGhsohxhXlt/1WjA2VQ4wrnr/M2YG9GBsqhxgbKocYV5Tf9lsxNlQOMa54
+        /jJpg99I9h5p87MXHyV7j7T52YuPkr1H2vzsxUfJ3iNtvje4+L0YGyqHGBsqhxhXlN/2WzE2VA4xrnj+
+        MmcH9mJsqBxibKgcYlxRfttvxdhQOcS44vnLjB6oelEdoPzem+0Az19m9EDVi+oA5ffebAd4/jKjB6pe
+        VAcov/dmO8Dzlxk9UPWiOkD5vTfbAZ6/zNmBvRgbKocYGyqHGFeU3/ZbMTZUDjGueP4yZwf2YmyoHGJs
+        qBxiXFF+22/F2FA5xLji+cukDX4j2Xukzc9efJTsPdLmZy8+SvYeafOzFx8le4+0+d7g4vdibKgcYmyo
+        HGJcaf3jZ/a3s/53/jTewPawVowNlUOMDZVDjCutH/RtLO/bWfL8abyBva96UR3g+dGEn+MN7H3Vi+oA
+        z48m/BxvYO+rXlQHeH404ed4A3tf9aI6QPnFmxXH3HAvm8IbWPxejA2VQ4wNlUOMK8pv+zPimBvuZVN4
+        A4vfi7GhcoixoXKIcUX5Xhf0v2lb7r3uXjZF+MBJ1B6zu9173exMl/CBk6g9Zne797rZmS7hAydRe9zb
+        7fBvnjZaTl63P0BwuXvgrya+/XXU8F9BfPubzWaz2Ww2m81ms/lZeHr6D59p3rAzcBPMAAAAAElFTkSu
+        QmCC
+</value>
+  </data>
+  <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAGXSURBVEhLzZS9SsNQFMeD4qSTRVAXFx/BitSXECEQ8kWmrF3rlql9C8UnqJMKgghuiu/g4Ae4
+        qLg5VP/nehKux9PcYIt44Nfce77u/yRNvH9heZ7PRVE0ALfMgHwcnty4+Yegz2G3uRRifw/kAXccdk/I
+        QdmgUoj1o4gRDxx2T4hNrUKsXQJq650Ky1sQx/ETQWtxC2vrnQqzLFtG450kSeZ931+gNfk47KyvVYh9
+        B/sXLrJ5BluuemNSYRiGu2UxrjdANjcg75pz2lSjTlijkBoMNb8NcvY1P/iaED9jFU6KmVALTJOmB7yD
+        HhStEbRmn5b7jaYH9MwDswy+PZGj0ugA/BFWuG9l5NNyJXTAm3RK7JeqtCAIVrVcwSspuVQCkl/dIvS+
+        8PDQMi0oMA8ZL9ESQWv2abk2sYeCWSzORWAanBVFMWPGTdO0BYf6wmHCIUZdx7qNa5fAJ2GDfUd2rsUV
+        hC+a5qXRNwTNDkXicaVCMYoh59TKH4ED+iZxyk9DwjagohEpZfdYg6hNbnyCqTrs/ivzvE+EqgN7t25a
+        NAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAANYSURBVHhe7ZpNaxNRFIaDoDv7D3TlSlfSnYiILnRdCMzkaxE0/0ChChqE+rm1/Rm6VpG2WPzA
+        X+BOtFG0IC6EoqL1PcN7Q0xijid3Mrej94FD555z3/fOPZ0kk49KJBKJWOh0Onvr9foNxGvGdcmxrBJa
+        7w0X3xmMWq22xLJKaL03WLAnizYajZPNZvMUT+Ityyqh9d5wwR0OR8YaofXe+J5AaL03vicQWq9SrVb3
+        4fF1B6byDJuZjwtO75+ANSiftV72cEv2xOk6ENweMPg0JrIapw+ewLi546JIfVbDP/Qmp+tA8E5ESZIc
+        Zeo3nCmHI2ONIvV4eZxnfZMpnUmGwnBdmz9M0XqtPoLVUJs/TNF6rT7CXxi+l3qapsdxiZ3g/B7LKkXr
+        Wc+1AaW6FXZzONTRBO7NCJ5ZP+LvB8RUb2aK0qOebwPKRmzAtA3AJbbGVAYeZw/LmJu6AcOiMueG8xP5
+        k6jMueH8RAZEG0xlYLxawtxTxHQN4LD0xAbEBuzCBsB/DrHBmGN6JsheJDjUMQuMyKcz8F9368ix6RMb
+        I24dDnXMAiO4WVkRf/yVe/ktHq+wnDvm/ZgFBuC7SP8vuEubl5Bj5hY5LVfoHb4B8KwhfiJ+YOMLTMvt
+        6oLkpIbjOtO5Ad/wDcAlfgye2+KL4wtM90H+ItfdlrlM5wJ9wzUAGzoEP/WxLjWuvSUapr2hZ7gG4LJ+
+        6TwN8YJyb5wnhzpmgQL+m2vO0xCrlHvjPDnUMQt2ObEBoRsAr0fO0xAPKPfGeXKoYxYo/PdPgq1W6yD8
+        su8bEXeZHgG1Zc7pJUlygGlv6BmuAUKapkfg+Vl88apwiek+yF/mujLnMNO5QN+wDRCw8bPw/Y6QW94m
+        0/IQaUpOajg+w3RuyF4kONQxCwzA9zz9vyJOM75JDg06x2m5It4SHOqYBUaw0f7bYQmut8xy7pj3YxYY
+        6Xa7e3Cp33frIO5JjuXcMe/HLJgC+MtHYs8Rz9rt9n6mZ4J5P2bBLic2IDbAswE4lq+cslxZAk+yj3n6
+        /g3AS9UTlytRrPP0/RtQdmIDYgPsDdgUAR77uX48HQL5LSEb8IYpHTyDLlH0zwT2dI3b05EvKiG4ingF
+        8bhfYJcmuIcrs/zyNRKJRCLlpVL5BdhOyCFYyJ2mAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="lblCEO.BaseStylesheet" xml:space="preserve">
+    <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 12pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(0, 0, 0); text-align: left; }</value>
+  </data>
+  <data name="lblOwner.BaseStylesheet" xml:space="preserve">
+    <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 12pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(0, 0, 0); text-align: left; }</value>
+  </data>
+  <data name="lblAdress.BaseStylesheet" xml:space="preserve">
+    <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 12pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(0, 0, 0); text-align: left; }</value>
+  </data>
+  <data name="lblDateCreate.BaseStylesheet" xml:space="preserve">
+    <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 12pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(0, 0, 0); text-align: left; }</value>
+  </data>
+  <data name="lblCompanyName.BaseStylesheet" xml:space="preserve">
+    <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 25pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(0, 0, 0); text-align: left; }</value>
+  </data>
   <data name="animation1.BlindCoeff" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFFTeXN0ZW0uRHJhd2luZywgVmVyc2lvbj00LjAuMC4wLCBDdWx0
